[build-system]
requires = [
    "setuptools>=67",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false
script-files = [
        "uniriv_clb/anonymize.py",
        "uniriv_clb/sort_dcm_files.py",
]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[project]
name = "uniriv-clb"
version = "0.0.1"
dynamic = ["readme"]
authors = [{name = "Thomas Baudier", email = "thomas.baudier@creatis.insa-lyon.fr"}]
description = "Python tools for Uniriv we use at the CLB"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]
dependencies = [
        "tqdm",
        "pydicom",
        "click",
]
requires-python = ">=3.9"
